[tool.poetry]
name = "sea7aero"
version = "1.0.0"
description = "Source code for https://sea7aero.space/"
authors = ["Jason Walker <ungood@onetrue.name>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
graupel-2 = { path = "projects/graupel-2", develop = true }
ipython = "^8.7.0"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"